--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Setiadi Informatika 7 */
+/* Setiadi 10121251 Informatika 7 */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 * {
